nobuild 0.2: markdown javadoc, use newer Java methods